<resources>
    <string name="app_name">Caclulator</string>
    <string name="string_ac">AC</string>
    <string name="string_open">(</string>
    <string name="string_one">1</string>
    <string name="string_expression">Expression</string>
    <string name="string_six">6</string>
    <string name="string_minus">-</string>
    <string name="string_three">3</string>
    <string name="string_four">4</string>
    <string name="string_dot">.</string>
    <string name="string_div">:</string>
    <string name="string_two">2</string>
    <string name="string_five">5</string>
    <string name="string_zero">0</string>
    <string name="string_mul">x</string>
    <string name="_9">9</string>
    <string name="string_eight">8</string>
    <string name="string_plus">+</string>
    <string name="string_result">Result</string>
    <string name="string_seven">7</string>
    <string name="string_equals">=</string>
    <string name="string_close">)</string>
</resources>